DTOconvertor renamed to dtoConvertor

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,7 +11,7 @@ add_executable(toDoList main.cpp Model/Task.cpp Model/Task.h Model/TaskID.cpp Mo
         API/TaskService.cpp API/TaskService.h Model/IdGenerator.cpp Model/IdGenerator.h
         Model/HashTaskID.cpp Model/HashTaskID.h Tests/IdGeneratorTest.cpp Tests/TaskTest.cpp Tests/TaskServiceTest.cpp
         Tests/TaskEntityTest.cpp Model/TaskDTO.cpp Model/TaskDTO.h Views/DateView.cpp Views/DateView.h Views/LabelView.cpp
-        Views/LabelView.h Views/PriorityView.cpp Views/PriorityView.h Model/DTOconvertor.cpp Model/DTOconvertor.h Model/Storage.cpp
+        Views/LabelView.h Views/PriorityView.cpp Views/PriorityView.h Model/dtoConvertor.cpp Model/dtoConvertor.h Model/Storage.cpp
         Model/Storage.h Model/StorageService.cpp Model/StorageService.h)
 
 set(BOOST_ROOT "C:/Users/Ilya/boost")
