--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,6 @@ set(CMAKE_CXX_STANDARD 17)
 
 set(CMAKE_MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>")
 include_directories(src)
-
 file(GLOB CPP_SOURCES "src/API/*.cpp" "src/Model/*.cpp" "src/Views/*.cpp")
 
 file(GLOB HEADERS "src/API/*.h" "src/Model/.*h" "src/Views/.*h")
@@ -19,7 +18,7 @@ enable_testing()
 
 
 add_executable(TestsExecutable ${TEST_SOURCES}
-                ${CPP_SOURCES})
+                ${CPP_SOURCES} CLI/State.h CLI/Context.cpp CLI/Context.h CLI/StateMachine.cpp CLI/StateMachine.h CLI/ViewState.cpp CLI/ViewState.h CLI/BaseState.cpp CLI/BaseState.h CLI/ExitState.cpp CLI/ExitState.h CLI/Validator.cpp CLI/Validator.h CLI/AddTaskState.cpp CLI/AddTaskState.h CLI/ViewTaskState.cpp CLI/ViewTaskState.h)
 
 target_link_libraries(TestsExecutable GTest::GTest GTest::Main ${GMOCK_LIBRARY} ${GMOCK_MAIN_LIBRARY})
 
